--- a/skin/frontend/kapten/default/src/less/style.less
+++ b/skin/frontend/kapten/default/src/less/style.less
@@ -32,7 +32,7 @@
 @import "kapten-icon.less";
 
 // Magento
-@import "magento.less";
+//@import "magento.less";
 
 // Reset
 @import "normalize.less";
@@ -48,8 +48,8 @@
 @import "buttons.less";
 
 // Components
-@import "component-animations.less";
-@import "dropdowns.less";
+//@import "component-animations.less";
+//@import "dropdowns.less";
 @import "input-groups.less";
 @import "navs.less";
 @import "navbar.less";
@@ -57,24 +57,24 @@
 @import "pagination.less";
 @import "alerts.less";
 @import "list-group.less";
-@import "panels.less";
+//@import "panels.less";
 @import "wells.less";
-@import "close.less";
+//@import "close.less";
 @import "headerteaser";
 
 @import "icons.less";
 @import "std.less";
 @import "misc.less";
 @import "logos.less";
-@import "languages.less";
-@import "search.less";
-@import "blocks.less";
+//@import "languages.less";
+//@import "search.less";
+//@import "blocks.less";
 //@import "categories.less";
 //@import "product-list";
 //@import "products.less";
-@import "prices.less";
-@import "ratings.less";
-@import "content.less";
+//@import "prices.less";
+//@import "ratings.less";
+//@import "content.less";
 //@import "cart.less";
 //@import "checkout.less";
 //@import "customer.less";
@@ -85,9 +85,9 @@
 //@import "rma.less";
 
 // Components w/ JavaScript
-@import "modals.less";
-@import "popovers.less";
-@import "carousel.less";
+//@import "modals.less";
+//@import "popovers.less";
+//@import "carousel.less";
 @import "slick.less";
 
 // Utility classes
