aktuelle version mit funktisfähigen Komponenten. Pixel momentan auskommentiert.

--- a/skin/frontend/kapten/default/src/less/style.less
+++ b/skin/frontend/kapten/default/src/less/style.less
@@ -81,7 +81,7 @@
 //@import "partner.less";
 //@import "passportprogram.less";
 
-//@import "inspiration.less";
+@import "inspiration.less";
 //@import "rma.less";
 
 // Components w/ JavaScript
@@ -104,7 +104,7 @@
 //@import "header/_mesh-collection";
 //@import "header/_fall-collection";
 //@import "header/_chrono";
-//@import "header/_backpacks";
+@import "header/_backpacks";
 //@import "header/_winter-collection";
 //@import "header/_winter-chrono-collection";
 //@import "header/_passportholder";
@@ -112,7 +112,7 @@
 //@import "header/_black-weekend";
 @import "header/_chrono_black_steel";
 //@import "header/_giftcard";
-@import "header/_extra_strap";
+//@import "header/_extra_strap";
 
 //@import "account.less";
 
