--- a/skin/frontend/kapten/default/css/style.css
+++ b/skin/frontend/kapten/default/css/style.css
@@ -8795,6 +8795,263 @@ button.list-group-item-danger.active:focus {
 h1.logo {
   margin: 0;
 }
+#root .post-item-container,
+.inline-inspiration .post-item-container {
+  position: relative;
+  margin: 15px -15px;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  #root .post-item-container,
+  .inline-inspiration .post-item-container {
+    margin: 15px -22px;
+  }
+}
+@media (min-width: 992px) {
+  #root .post-item-container,
+  .inline-inspiration .post-item-container {
+    margin: 15px -22px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  #root .post-item-container,
+  .inline-inspiration .post-item-container {
+    margin: 15px -22px;
+  }
+}
+#root .post-item-container:before,
+.inline-inspiration .post-item-container:before,
+#root .post-item-container:after,
+.inline-inspiration .post-item-container:after {
+  content: " ";
+  display: table;
+}
+#root .post-item-container:after,
+.inline-inspiration .post-item-container:after {
+  clear: both;
+}
+#root .post-item-container:before,
+.inline-inspiration .post-item-container:before,
+#root .post-item-container:after,
+.inline-inspiration .post-item-container:after {
+  content: " ";
+  display: table;
+}
+#root .post-item-container:after,
+.inline-inspiration .post-item-container:after {
+  clear: both;
+}
+#root .post-item-container .post-item,
+.inline-inspiration .post-item-container .post-item {
+  float: left;
+  margin: 15px;
+  position: relative;
+}
+#root .post-item-container .post-item a,
+.inline-inspiration .post-item-container .post-item a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  #root .post-item-container .post-item,
+  .inline-inspiration .post-item-container .post-item {
+    margin: 22px 0 0 22px!important;
+  }
+}
+@media (min-width: 992px) {
+  #root .post-item-container .post-item,
+  .inline-inspiration .post-item-container .post-item {
+    margin: 22px 0 0 22px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  #root .post-item-container .post-item,
+  .inline-inspiration .post-item-container .post-item {
+    margin: 22px 0 0 22px;
+  }
+}
+#root .post-item-container .post-item img,
+.inline-inspiration .post-item-container .post-item img {
+  max-width: 100%;
+}
+@media (max-width: 991px) {
+  #inspiration #root .post-item-container.big .post-item {
+    display: inline-block;
+    float: none;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 15px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  #inspiration #root .post-item-container.big .post-item {
+    padding: 0;
+  }
+}
+#inspiration #root .post-item-container.big .instagramdetails {
+  padding: 0 20px 0 20px;
+  margin-bottom: 15px;
+}
+#inspiration #root .post-item-container.big .instagramdetails .product-link {
+  text-align: right;
+}
+#inspiration #root .post-item-container.big .instagramdetails .product-link .product-name {
+  margin: 10px 0 5px 0;
+}
+#inspiration #root .post-item-container.big .instagramdetails .product-link .btn:hover,
+#inspiration #root .post-item-container.big .instagramdetails .product-link .btn:focus,
+#inspiration #root .post-item-container.big .instagramdetails .product-link .btn.focus {
+  color: white;
+}
+#inspiration #root .post-item {
+  overflow: hidden;
+}
+@media (max-width: 991px) {
+  #inspiration #root .post-item {
+    display: inline-block;
+    float: none;
+    width: 31.3vw;
+    height: 31.3vw;
+    margin: 1vw;
+  }
+}
+#inspiration #root .post-item img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+#inspiration #root .post-item.instagram {
+  max-width: 100%;
+  max-height: 100%;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  #inspiration #root .post-item.instagram {
+    float: left!important;
+    width: 225px!important;
+    height: 225px!important;
+  }
+}
+@media (min-width: 992px) {
+  #inspiration #root .post-item.instagram {
+    width: 300px;
+    height: 300px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  #inspiration #root .post-item.instagram {
+    width: 245px;
+    height: 245px;
+  }
+}
+.inline-inspiration .post-item.instagram {
+  max-width: 100%;
+  max-height: 100%;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .inline-inspiration .post-item.instagram {
+    width: 350px;
+    height: 350px;
+  }
+}
+@media (min-width: 992px) {
+  .inline-inspiration .post-item.instagram {
+    width: 269px;
+    height: 269px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+  .inline-inspiration .post-item.instagram {
+    width: 219px;
+    height: 219px;
+  }
+}
+#post-title {
+  font-family: 'PT Serif', serif;
+  font-size: 40px;
+  line-height: 47px;
+  text-align: center;
+  margin-top: 70px;
+}
+@media (max-width: 991px) {
+  #post-title {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+#post-author {
+  font-size: 15px;
+  line-height: 22px;
+  font-style: italic;
+  text-align: center;
+  color: #9ba3ab;
+}
+#post-subtitle {
+  font-family: 'PT Serif', serif;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  margin-top: 40px;
+  font-style: italic;
+}
+@media (max-width: 991px) {
+  #post-subtitle {
+    font-size: 15px;
+    line-height: 18px;
+  }
+}
+.post-item.blog,
+.post-item.instagram {
+  position: relative;
+}
+.post-item.blog:hover .inspirations-post-hover,
+.post-item.instagram:hover .inspirations-post-hover {
+  display: block;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.post-item.blog .inspirations-post-hover,
+.post-item.instagram .inspirations-post-hover {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding-top: 30%;
+  top: 0;
+  left: 0;
+}
+.post-item.blog .inspirations-post-hover div,
+.post-item.instagram .inspirations-post-hover div {
+  display: inline-block;
+}
+.post-item.blog .inspirations-post-hover div:hover h2,
+.post-item.instagram .inspirations-post-hover div:hover h2,
+.post-item.blog .inspirations-post-hover div:hover p,
+.post-item.instagram .inspirations-post-hover div:hover p {
+  color: #f07873;
+}
+.post-item.blog .inspirations-post-hover div h2,
+.post-item.instagram .inspirations-post-hover div h2,
+.post-item.blog .inspirations-post-hover div p,
+.post-item.instagram .inspirations-post-hover div p {
+  color: white;
+}
+.post-item.blog .inspirations-post-hover div h2.main-text,
+.post-item.instagram .inspirations-post-hover div h2.main-text {
+  font-family: Freeland;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2.4em;
+  margin-bottom: 2px;
+  padding: 0 15px;
+}
+.post-item.blog .inspirations-post-hover div p,
+.post-item.instagram .inspirations-post-hover div p {
+  font-style: italic;
+  font-family: 'PT Serif', serif;
+  letter-spacing: 1px;
+}
 /* Slider */
 .slick-slider {
   position: relative;
@@ -11668,6 +11925,95 @@ footer[role="contentinfo"]:after,
   border-color: #bd8a57;
   margin-top: 20px;
 }
+.startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image {
+  background: url("../images/frontpage/headerslider/header_copenhagen_all_black_mobile.jpg") no-repeat;
+  background-size: cover;
+  height: 420px;
+  align-items: flex-start;
+  margin-bottom: 1em;
+  background-position: center center;
+}
+@media (min-width: 768px) {
+  .startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image {
+    background: url("../images/frontpage/headerslider/header_copenhagen_all_black_desktop.jpg") no-repeat;
+    background-position: center center;
+    height: 400px;
+    align-items: center;
+  }
+}
+.startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .text-block {
+  margin: 0 auto;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .text-block {
+    margin: -3em;
+  }
+}
+@media (min-width: 992px) {
+  .startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .text-block {
+    margin: 0;
+  }
+}
+.startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .header-title {
+  font-family: TradeGothic, sans-serif;
+  text-transform: uppercase;
+  font-size: 50px;
+  line-height: 50px;
+  color: black;
+  padding-left: 0;
+  letter-spacing: 3px;
+  text-shadow: 1px 1px 1px  white;
+}
+@media (min-width: 768px) {
+  .startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .header-title {
+    letter-spacing: 4px;
+    text-shadow: none;
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+@media (min-width: 992px) {
+  .startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .header-title {
+    font-size: 70px;
+    line-height: 70px;
+  }
+}
+.startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .header-title-small {
+  margin: 5px 0 0 0;
+  text-align: center;
+  font-family: TradeGothic, sans-serif;
+  text-transform: uppercase;
+  font-size: 25px;
+  color: black;
+  letter-spacing: 3px;
+  padding-left: 0;
+}
+@media (min-width: 768px) {
+  .startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .header-title-small {
+    font-size: 34px;
+  }
+}
+.startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .header-text-red {
+  font-family: Freeland;
+  color: #f07873;
+  font-size: 40px;
+  margin-top: -17px;
+}
+.startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .btn {
+  text-transform: uppercase;
+  color: white;
+  background-color: #f07873;
+  border: 1px solid #f07873;
+  margin: 220px 0 0 0;
+  height: 37px;
+}
+@media (min-width: 768px) {
+  .startpage #landing-page-slider .landing-page-slide.backpack-header .teaser-image .btn {
+    height: 40px;
+    margin: 20px 0 0 0;
+  }
+}
 .startpage #landing-page-slider .landing-page-slide.chrono-black-steel-header .teaser-image {
   background: url("../images/frontpage/headerslider/header_chrono_black_steel_mobile.jpg") no-repeat;
   background-size: cover;
@@ -11763,216 +12109,26 @@ footer[role="contentinfo"]:after,
     height: 40px;
   }
 }
-.startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image {
-  background: url("../images/frontpage/headerslider/header_extra_strap_mobile.jpg") no-repeat;
-  background-size: cover;
-  background-position: center center;
-  height: 420px;
-  align-items: flex-end;
-  margin-bottom: 1em;
-}
-@media (min-width: 768px) {
-  .startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image {
-    background: url("../images/frontpage/headerslider/header_extra_strap_desktop.jpg") no-repeat;
-    background-position: right center;
-    height: 400px;
-    align-items: center;
-    background-position-x: -23em;
-  }
-}
-@media (min-width: 992px) {
-  .startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image {
-    background-position-x: right;
-  }
-}
-.startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .text-block {
-  margin: 0 auto;
-  text-align: center;
-}
-.startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .header-title {
-  font-size: 2em;
-  margin: 0;
-}
-@media (min-width: 992px) {
-  .startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .header-title {
-    font-size: 3em;
-  }
-}
-.startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .header-text {
-  font-family: TradeGothic, sans-serif;
-  text-transform: uppercase;
-  font-size: 1.2em;
-  color: #374858;
-  padding-left: 0;
-  letter-spacing: 0px;
-}
-.startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .header-text-red {
-  font-family: Freeland;
-  color: #f07873;
-  font-size: 2em;
-  text-align: left;
-  transform: rotate(-15deg);
-  margin-bottom: 15px;
-}
-@media (min-width: 400px) {
-  .startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .header-text-red {
-    text-align: center;
-    padding-right: 30%;
-  }
-}
-@media (min-width: 768px) {
-  .startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .header-text-red {
-    padding-right: 40%;
-    margin-bottom: 25px;
-  }
-}
-.startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .btn {
-  text-transform: uppercase;
-  color: white;
-  background-color: #374858;
-  border: 1px solid #374858;
-  margin: 0.5em 0 0.5em 0;
-  height: 37px;
-}
-@media (min-width: 768px) {
-  .startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .btn {
-    height: 40px;
-    margin: 1em 0 0.5em 0;
-  }
-}
-.startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .header-faq {
-  text-transform: uppercase;
-  font-family: TradeGothic, sans-serif;
-  font-size: 0.9em;
-  margin-bottom: 0.5em;
-}
-.startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .header-faq a {
-  color: #374858;
-}
-.startpage #landing-page-slider .landing-page-slide.extra-strap-header .teaser-image .header-faq a:hover {
-  text-decoration: underline;
-}
 .bestseller {
-  padding: 0 15px;
+  text-align: center;
+  padding-bottom: 42px;
 }
-.bestseller .product-list-container {
-  list-style: none;
-  padding: 0 !important;
-  margin: 0 !important;
+.bestseller .product-img {
+  max-width: 100%;
+  max-height: 200px;
 }
-.bestseller .product-list-container li {
-  position: relative;
-  min-height: 1px;
-  margin: 0 !important;
-  width: 100% !important;
-  height: auto !important;
-  padding-top: 2rem;
+.bestseller a {
+  font-family: 'PT Serif', serif;
+  color: #374858;
 }
-.bestseller .product-list-container .product-item .product-image img {
-  margin: auto!important;
+.bestseller a .product-name {
+  font-size: 19px;
+  height: 60px;
 }
-.bestseller .product-list-container.backpacks .product-item p {
-  margin: 0 0 28px!important;
+.bestseller a .price {
+  font-family: TradeGothic;
+  font-size: 18px;
 }
-.bestseller .product-badge {
-  display: none !important;
-}
-.bestseller .slick-list {
-  padding-bottom: 3em;
-}
-.bestseller .slick-arrow {
-  z-index: 999;
-  font-size: 0;
-  line-height: 0;
-  top: 50%;
-  cursor: pointer;
-  color: transparent;
-  border: none;
-  outline: none;
-  position: absolute;
-  display: block;
-  height: 32px;
-  width: 32px;
-  background: transparent center center no-repeat;
-  background-size: contain;
-  margin-top: -40px;
-}
-@media (max-width: 991px) {
-  .bestseller .slick-arrow {
-    height: 32px;
-    width: 32px;
-  }
-}
-.bestseller .slick-arrow.slick-prev {
-  left: 0;
-  background-image: url("../images/icons/slider_left_border.svg");
-}
-.bestseller .slick-arrow.slick-next {
-  right: 0;
-  background-image: url("../images/icons/slider_right_border.svg");
-}
-@media (min-width: 768px) {
-  .bestseller .product-list-container.sunglasses p {
-    margin-bottom: 25px;
-  }
-  .bestseller .product-list-container.sunglasses .product-image {
-    padding: 0 !important;
-    height: 200px !important;
-  }
-  .bestseller .product-list-container.sunglasses .product-image img {
-    top: -35% !important;
-  }
-  .bestseller .product-list-container.straps .product-item p {
-    margin: 0 0 60px 0 !important;
-  }
-  .bestseller .product-list-container.backpacks .product-item p {
-    margin: 0 0 15px!important;
-  }
-}
-@media (min-width: 992px) {
-  .bestseller .product-list-container .product-image {
-    margin-top: 15px;
-    height: 200px !important;
-  }
-  .bestseller .product-list-container .product-image img {
-    max-height: 100% !important;
-  }
-  .bestseller .product-list-container.sunglasses p {
-    margin-bottom: 62px;
-  }
-  .bestseller .product-list-container.sunglasses .product-image {
-    padding: 0 !important;
-  }
-  .bestseller .product-list-container.sunglasses .product-image img {
-    max-width: none !important;
-    max-height: none !important;
-    width: 100% !important;
-    top: -3% !important;
-  }
-  .bestseller .product-list-container.backpacks .product-item p {
-    margin: 0 0 49px!important;
-  }
-}
-@media (min-width: 1200px) {
-  .bestseller .product-list-container.sunglasses .product-image {
-    padding: 0 !important;
-  }
-  .bestseller .product-list-container.sunglasses .product-image img {
-    top: -15% !important;
-  }
-}
-@media (max-width: 768px) {
-  .bestseller .product-list-container.sunglasses p {
-    margin-bottom: 25px;
-  }
-  .bestseller .product-list-container.sunglasses .product-item .product-image {
-    height: 200px !important;
-    padding-top: 0px;
-  }
-  .bestseller .product-list-container.sunglasses .product-item .product-image img {
-    position: relative;
-    max-width: 333px;
-    top: -20%;
-    bottom: -20px !important;
-  }
+.bestseller a:hover {
+  color: #f07873;
 }
