--- a/de/skin/frontend/kapten/default/src/less/style.less
+++ b/de/skin/frontend/kapten/default/src/less/style.less
@@ -95,7 +95,7 @@
 @import "responsive-utilities.less";
 
 @import "footer.less";
-@import "configurator.less";
+//@import "configurator.less";
 
 @import "frontpage.less";
 //@import "header/_summer-sale";
